--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="content">
             <h3> Paralegal Services<span></span></h3>
-            <p>Paralegal Outsourcing, Civil & Labour Matters, Delictual Claims, drafting of wills, Contract, Road Accident Fund, Coveyancing & Property Law</p>
+            <p>Paralegal Outsourcing, Civil & Labour Matters, Delictual Claims, drafting of wills, Contracts, Road Accident Fund, Coveyancing & Property Law</p>
             <a href="#" class="btn"> More Information</a>
         </div>
 
@@ -257,7 +257,7 @@
             <img src="images/contact2.jfif" alt="">
         </div> -->
 
-        <form action="https://formsubmit.co/thandoxalabile@gmail.com" method="POST">
+        <form action="mail." method="POST">
 
 
             <h1 class="heading" style=" margin-left: 21%;">contact us</h1>
@@ -271,28 +271,27 @@
 
             <div class="inputBox">
                 <input type="email" required>
-                <label>email</label>
+                <label>your email address</label>
             </div>
 
             <div class="inputBox">
-                <input type="text" required>
-                <label>phone</label>
+                <input type="number" required>
+                <label>your phone number</label>
             </div>
 
             <div class="inputBox">
                 <textarea required name="" id="" cols="30" rows="10"></textarea>
-                <label>message</label>
+                <label>your message</label>
             </div>
 
             <!-- <input type="submit" class="btn" value="send message"> -->
-            <button type="submit" style="background-color:rgb(230, 174, 54) ; width: 70px; height: 40px; cursor: pointer; hover: Red;">Send</button>
+            <button type="submit" style="background-color:rgb(236, 195, 81) ; width: 70px; height: 40px; cursor: pointer;">Send</button>
 
         </form>
 
     </section>
 
-    <!-- contact section edns -->
-
+    <!-- contact section ends -->
     <!-- footer section starts  -->
 
     <div class="footer">
