--- a/thankyou.html
+++ b/thankyou.html
@@ -32,7 +32,10 @@
 
     </header>
 
-    <h1>Thank you!</h1>
+    <body>
+        <h1> Thank you for Contacting us</h1>
+        <h2>We will get back to you as soon as possible</h2>
+    </body>
 
     <!-- footer section starts  -->
 
