--- a/index.html
+++ b/index.html
@@ -250,6 +250,16 @@
 
 
     <!-- contact section starts  -->
+    <div class="container">
+        <h1>Contact form</h1>
+        <form action="https://formsubmit.co/thandoxalabile@gmail.com" method="POST">
+            <input type="text" name="Name" placeholder="Full Name" required>
+            <input type="email" name="Email" placeholder="Email" required>
+            <input type="number" name="Phone number" placeholder="Phone number" required>
+            <textarea name="Message" placeholder="Message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </div>
 
     <section class="contact" id="contact" style="margin-top:-20%;">
 
