--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
 
 
     <!-- contact section starts  -->
-    <div class="container">
+    <div class="contact">
         <h1>Contact form</h1>
         <form action="https://formsubmit.co/thandoxalabile@gmail.com" method="POST">
-            <input type="text" name="Name" placeholder="Full Name" required>
-            <input type="email" name="Email" placeholder="Email" required>
-            <input type="number" name="Phone number" placeholder="Phone number" required>
-            <textarea name="Message" placeholder="Message" required></textarea>
+            <div class="inputBox"><input type="text" name="Name" placeholder="Full Name" required></div>
+            <div class="inputBox"><input type="email" name="Email" placeholder="Email" required></div>
+            <div class="inputBox"><input type="number" name="Phone number" placeholder="Phone number" required></div>
+            <div class="inputBox"><textarea name="Message" placeholder="Message" required></textarea></div>
             <button type="submit">Send</button>
         </form>
     </div>
