--- a/index.html
+++ b/index.html
@@ -251,16 +251,15 @@
 
     <!-- contact section starts  -->
     <div class="contact">
-        <h1>Contact form</h1>
+        <h1 class="heading" style=" margin-left: 8%;">contact us</h1>
         <form action="https://formsubmit.co/thandoxalabile@gmail.com" method="POST">
             <div class="inputBox"><input type="text" name="Name" placeholder="Full Name" required></div>
             <div class="inputBox"><input type="email" name="Email" placeholder="Email" required></div>
             <div class="inputBox"><input type="number" name="Phone number" placeholder="Phone number" required></div>
             <div class="inputBox"><textarea name="Message" placeholder="Message" required></textarea></div>
-            <button type="submit">Send</button>
+            <button type="submit" style="background-color:rgb(236, 195, 81) ; width: 70px; height: 40px; cursor: pointer;">Send</button>
         </form>
     </div>
-
     
 
     <!-- contact section ends -->
